Task instance Java/113